--- a/examples/trials/auto-gbdt/config_paiYarn.yml
+++ b/examples/trials/auto-gbdt/config_paiYarn.yml
@@ -1,10 +1,10 @@
 authorName: default
-experimentName: example_mnist_pytorch
+experimentName: example_auto-gbdt
 trialConcurrency: 1
-maxExecDuration: 1h
+maxExecDuration: 10h
 maxTrialNum: 10
 #choice: local, remote, pai
-trainingServicePlatform: pai
+trainingServicePlatform: paiYarn
 searchSpacePath: search_space.json
 #choice: true, false
 useAnnotation: false
@@ -14,22 +14,19 @@ tuner:
   builtinTunerName: TPE
   classArgs:
     #choice: maximize, minimize
-    optimize_mode: maximize
+    optimize_mode: minimize
 trial:
-  command: python3 mnist.py
+  command: python3 main.py
   codeDir: .
   gpuNum: 0
   cpuNum: 1
   memoryMB: 8196
   #The docker image to run nni job on pai
   image: msranni/nni:latest
-  nniManagerNFSMountPath: /home/user/mnt
-  containerNFSMountPath: /mnt/data/user
-  paiStoragePlugin: team_wise
-paiConfig:
+paiYarnConfig:
   #The username to login pai
   userName: username
-  #The token to login pai
-  token: token
+  #The password to login pai
+  passWord: password
   #The host of restful server of pai
   host: 10.10.10.10
