--- a/examples/trials/mnist-advisor/config_paiYarn.yml
+++ b/examples/trials/mnist-advisor/config_paiYarn.yml
@@ -1,18 +1,22 @@
 authorName: default
-experimentName: example_mnist_pytorch
-trialConcurrency: 1
+experimentName: example_mnist_hyperband
 maxExecDuration: 1h
-maxTrialNum: 10
+maxTrialNum: 10000
+trialConcurrency: 10
 #choice: local, remote, pai
-trainingServicePlatform: pai
+trainingServicePlatform: paiYarn
 searchSpacePath: search_space.json
 #choice: true, false
 useAnnotation: false
-tuner:
-  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner, GPTuner
-  #SMAC (SMAC should be installed through nnictl)
-  builtinTunerName: TPE
+advisor:
+  #choice: Hyperband, BOHB
+  #(BOHB should be installed through nnictl)
+  builtinAdvisorName: Hyperband
   classArgs:
+    #R: the maximum trial budget
+    R: 100
+    #eta: proportion of discarded trials
+    eta: 3
     #choice: maximize, minimize
     optimize_mode: maximize
 trial:
@@ -23,13 +27,10 @@ trial:
   memoryMB: 8196
   #The docker image to run nni job on pai
   image: msranni/nni:latest
-  nniManagerNFSMountPath: /home/user/mnt
-  containerNFSMountPath: /mnt/data/user
-  paiStoragePlugin: team_wise
-paiConfig:
+paiYarnConfig:
   #The username to login pai
   userName: username
-  #The token to login pai
-  token: token
+  #The password to login pai
+  passWord: password
   #The host of restful server of pai
   host: 10.10.10.10
