--- a/examples/trials/mnist-annotation/config_paiYarn.yml
+++ b/examples/trials/mnist-annotation/config_paiYarn.yml
@@ -1,15 +1,14 @@
 authorName: default
-experimentName: example_mnist_pytorch
+experimentName: example_mnist
 trialConcurrency: 1
 maxExecDuration: 1h
 maxTrialNum: 10
 #choice: local, remote, pai
-trainingServicePlatform: pai
-searchSpacePath: search_space.json
+trainingServicePlatform: paiYarn
 #choice: true, false
-useAnnotation: false
+useAnnotation: true
 tuner:
-  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner, GPTuner
+  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner
   #SMAC (SMAC should be installed through nnictl)
   builtinTunerName: TPE
   classArgs:
@@ -23,13 +22,10 @@ trial:
   memoryMB: 8196
   #The docker image to run nni job on pai
   image: msranni/nni:latest
-  nniManagerNFSMountPath: /home/user/mnt
-  containerNFSMountPath: /mnt/data/user
-  paiStoragePlugin: team_wise
-paiConfig:
+paiYarnConfig:
   #The username to login pai
   userName: username
-  #The token to login pai
-  token: token
+  #The password to login pai
+  passWord: password
   #The host of restful server of pai
   host: 10.10.10.10
