--- a/test/pipelines-it-remote-windows.yml
+++ b/test/pipelines-it-remote-windows.yml
@@ -32,7 +32,10 @@ jobs:
   - powershell: |
       Write-Host "Downloading Putty..."
       (New-Object Net.WebClient).DownloadFile("https://the.earth.li/~sgtatham/putty/latest/w64/pscp.exe", "$(Agent.TempDirectory)\pscp.exe")
+      Write-Host "Download Putty success!"
+      Write-Host "Connecting to host..."
       $(Agent.TempDirectory)\pscp.exe -hostkey $(hostkey) -pw $(pscp_pwd) $(remote_user)@$(remote_host):/tmp/nnitest/$(Build.BuildId)/port test\port
+      Write-Host "Get port success!"
       Get-Content test\port
     displayName: 'Get docker port'
   - powershell: |
