--- a/test/pipelines-it-local-windows.yml
+++ b/test/pipelines-it-local-windows.yml
@@ -8,8 +8,7 @@ jobs:
   - script: |
       python -m pip install scikit-learn==0.20.0 --user
       python -m pip install keras==2.1.6 --user
-      python -m pip install torch===1.2.0 torchvision===0.4.1 -f https://download.pytorch.org/whl/torch_stable.html --user
-      python -m pip install torchvision --user
+      python -m pip install torch===1.2.0 torchvision===0.5.0 -f https://download.pytorch.org/whl/torch_stable.html --user
       python -m pip install tensorflow-gpu==1.11.0 --user
     displayName: 'Install dependencies for integration tests'
   - script: |
@@ -18,7 +17,7 @@ jobs:
     displayName: 'generate config files'
   - script: |
       cd test
-      python config_test.py --ts local --local_gpu --exclude smac,bohb
+      python config_test.py --ts local --local_gpu --exclude smac,bohb,cifar10
     displayName: 'Examples and advanced features tests on local machine'
   - script: |
       cd test
