--- a/test/pipelines-it-local-windows.yml
+++ b/test/pipelines-it-local-windows.yml
@@ -1,5 +1,6 @@
 jobs:
-- job: 'Test'
+- job: 'integration_test_local_windows'
+  timeoutInMinutes: 0
 
   steps:
   - script: |
@@ -9,7 +10,6 @@ jobs:
       python -m pip install scikit-learn==0.20.0 --user
       python -m pip install keras==2.1.6 --user
       python -m pip install torch===1.2.0 torchvision===0.4.1 -f https://download.pytorch.org/whl/torch_stable.html --user
-      python -m pip install torchvision --user
       python -m pip install tensorflow-gpu==1.11.0 --user
     displayName: 'Install dependencies for integration tests'
   - script: |
