--- a/src/nasui/package.json
+++ b/src/nasui/package.json
@@ -3,35 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@bardit/cytoscape-expand-collapse": "^2.0.3",
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/cytoscape": "^3.14.0",
-    "@types/d3-graphviz": "^2.6.3",
-    "@types/dagre-d3": "^0.4.39",
-    "@types/graphlib-dot": "^0.6.1",
-    "@types/jest": "^24.0.0",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "cytoscape": "^3.14.0",
     "cytoscape-cola": "^2.3.0",
     "cytoscape-dagre": "^2.2.2",
-    "cytoscape-expand-collapse": "^3.2.0",
     "cytoscape-panzoom": "^2.5.3",
     "d3": "^5.15.0",
     "d3-graphviz": "^2.6.1",
     "d3-selection": "^1.4.1",
     "dagre-d3": "^0.6.4",
     "express": "^4.17.1",
-    "gojs": "^2.1.9",
-    "graphlib-dot": "^0.6.4",
     "lodash": "^4.17.15",
-    "protobufjs": "^6.8.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
@@ -60,10 +43,22 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/cytoscape": "^3.14.0",
     "@types/d3": "^5.7.2",
     "@types/d3-array": "^2.0.0",
+    "@types/d3-graphviz": "^2.6.3",
     "@types/d3-scale": "^2.1.1",
-    "@types/d3-selection": "^1.4.1"
+    "@types/d3-selection": "^1.4.1",
+    "@types/dagre-d3": "^0.4.39",
+    "@types/graphlib-dot": "^0.6.1",
+    "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0"
   },
   "proxy": "http://localhost:8080"
 }
