--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -100,8 +100,14 @@ jobs:
       nnictl package install --name=SMAC
     displayName: 'Install dependencies'
   - script: |
-      cd test
-      source unittest.sh
+      set -e
+      export NNI_TRIAL_JOB_ID=test_trial_job_id
+      export NNI_PLATFORM=unittest
+
+      echo ""
+      echo "===========================Testing: nni_sdk==========================="
+      cd src/sdk/pynni/
+      python3 -m unittest discover -v tests
     displayName: 'Unit test'
   - script: |
       cd test
