--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,7 +77,7 @@ jobs:
 
 - job: 'basic_test_pr_macOS'
   pool:
-    vmImage: 'macOS-10.15'
+    vmImage: 'macOS-10.14'
   strategy:
     matrix:
       Python3:
@@ -94,20 +94,15 @@ jobs:
       python3 -m pip install torch==1.2.0 --user
       python3 -m pip install torchvision==0.4.0 --user
       python3 -m pip install tensorflow==1.13.1 --user
+      python3 -m pip install sphinx==1.8.3 sphinx-argparse==0.2.5 sphinx-markdown-tables==0.0.9 sphinx-rtd-theme==0.4.2 sphinxcontrib-websupport==1.1.0 recommonmark==0.5.0 --user
       ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)" < /dev/null 2> /dev/null
       brew install swig@3
       ln -s /usr/local/opt/swig\@3/bin/swig /usr/local/bin/swig
       nnictl package install --name=SMAC
     displayName: 'Install dependencies'
   - script: |
-      set -e
-      export NNI_TRIAL_JOB_ID=test_trial_job_id
-      export NNI_PLATFORM=unittest
-
-      echo ""
-      echo "===========================Testing: nni_sdk==========================="
-      cd src/sdk/pynni/
-      python3 -m unittest discover -v tests
+      cd test
+      source unittest.sh
     displayName: 'Unit test'
   - script: |
       cd test
