--- a/test/config/examples/mnist-tfv1.yml
+++ b/test/config/examples/mnist-tfv1.yml
@@ -12,7 +12,7 @@ assessor:
   classArgs:
     optimize_mode: maximize
 trial:
-  codeDir: ../../../../examples/trials/mnist-tfv1
+  codeDir: ../../../examples/trials/mnist-tfv1
   command: python3 mnist.py --batch_num 10
   gpuNum: 0
 
