--- a/test/pipelines/pipelines-it-local.yml
+++ b/test/pipelines/pipelines-it-local.yml
@@ -24,21 +24,17 @@ jobs:
     displayName: 'Unit test'
   - script: |
       cd test
-      PATH=$HOME/.local/bin:$PATH python3 naive_test.py
+      PATH=$HOME/.local/bin:$PATH python3 nni_test/nnitest/naive_test.py
     displayName: 'Naive test'
   - script: |
       cd test
-      PATH=$HOME/.local/bin:$PATH python3 tuner_test.py
+      PATH=$HOME/.local/bin:$PATH python3 nni_test/nnitest/tuner_test.py
     displayName: 'Built-in tuners / assessors tests'
   - script: |
       cd test
-      PATH=$HOME/.local/bin:$PATH python3 config_test.py --ts local --local_gpu
+      PATH=$HOME/.local/bin:$PATH python3 nni_test/nnitest/run_tests.py --config config/integration_tests.yml --ts local
     displayName: 'Examples and advanced features tests on local machine'
   - script: |
       cd test
-      PATH=$HOME/.local/bin:$PATH python3 metrics_test.py
-    displayName: 'Trial job metrics test'
-  - script: |
-      cd test
-      PATH=$HOME/.local/bin:$PATH python3 cli_test.py
+      PATH=$HOME/.local/bin:$PATH python3 nni_test/nnitest/cli_test.py
     displayName: 'nnicli test'
