--- a/test/config/examples/mnist-nested-search-space.yml
+++ b/test/config/examples/mnist-nested-search-space.yml
@@ -1,19 +1,20 @@
 authorName: nni
 experimentName: default_test
-maxExecDuration: 15m
+maxExecDuration: 5m
 maxTrialNum: 4
 trialConcurrency: 2
-searchSpacePath: ./mnist_pytorch_search_space.json
+searchSpacePath: ../../../examples/trials/mnist-nested-search-space/search_space.json
 
 tuner:
-  builtinTunerName: Random
+  #choice: TPE, Random, Anneal, Evolution
+  builtinTunerName: TPE
 assessor:
   builtinAssessorName: Medianstop
   classArgs:
     optimize_mode: maximize
 trial:
-  codeDir: ../../../examples/trials/mnist-pytorch
-  command: python3 mnist.py  --epochs 2
+  codeDir: ../../../examples/trials/mnist-nested-search-space
+  command: python3 mnist.py --batch_num 10
   gpuNum: 0
 
 useAnnotation: false
