--- a/test/config/examples/mnist-tfv1.yml
+++ b/test/config/examples/mnist-tfv1.yml
@@ -3,18 +3,17 @@ experimentName: default_test
 maxExecDuration: 5m
 maxTrialNum: 4
 trialConcurrency: 2
-searchSpacePath: ../../../examples/trials/mnist-nested-search-space/search_space.json
+searchSpacePath: ./mnist_search_space.json
 
 tuner:
-  #choice: TPE, Random, Anneal, Evolution
-  builtinTunerName: TPE
+  builtinTunerName: Random
 assessor:
   builtinAssessorName: Medianstop
   classArgs:
     optimize_mode: maximize
 trial:
-  codeDir: ../../../examples/trials/mnist-nested-search-space
-  command: python3 mnist.py --batch_num 100
+  codeDir: ../../../examples/trials/mnist-tfv1
+  command: python3 mnist.py --batch_num 10
   gpuNum: 0
 
 useAnnotation: false
