--- a/test/pipelines/pipelines-it-local.yml
+++ b/test/pipelines/pipelines-it-local.yml
@@ -28,13 +28,5 @@ jobs:
     displayName: 'Naive test'
   - script: |
       cd test
-      PATH=$HOME/.local/bin:$PATH python3 nni_test/nnitest/tuner_test.py
-    displayName: 'Built-in tuners / assessors tests'
-  - script: |
-      cd test
       PATH=$HOME/.local/bin:$PATH python3 nni_test/nnitest/run_tests.py --config config/integration_tests.yml --ts local
-    displayName: 'Examples and advanced features tests on local machine'
-  - script: |
-      cd test
-      PATH=$HOME/.local/bin:$PATH python3 nni_test/nnitest/cli_test.py
-    displayName: 'nnicli test'
+    displayName: 'Integration tests'
