--- a/test/pipelines/pipelines-it-local-windows.yml
+++ b/test/pipelines/pipelines-it-local-windows.yml
@@ -14,29 +14,13 @@ jobs:
     displayName: 'Install dependencies for integration tests'
   - script: |
       cd test
-      python generate_ts_config.py --ts local
-    displayName: 'generate config files'
-  - script: |
-      cd test
-      python config_test.py --ts local --local_gpu --exclude smac,bohb
-    displayName: 'Examples and advanced features tests on local machine'
-  - script: |
-      cd test
-      powershell.exe -file unittest.ps1
+      powershell.exe -file scripts/unittest.ps1
     displayName: 'unit test'
   - script: |
       cd test
-      python naive_test.py
+      python nni_test/nnitest/naive_test.py
     displayName: 'Naive test'
   - script: |
       cd test
-      python tuner_test.py
-    displayName: 'Built-in tuners / assessors tests'
-  - script: |
-      cd test
-      python metrics_test.py
-    displayName: 'Trial job metrics test'
-  - script: |
-      cd test
-      PATH=$HOME/.local/bin:$PATH python3 cli_test.py
-    displayName: 'nnicli test'
+      python nni_test/nnitest/run_tests.py --config config/integration_tests.yml --ts local --exclude smac,bohb
+    displayName: 'Integration tests'
