--- a/test/pipelines/pipelines-it-local.yml
+++ b/test/pipelines/pipelines-it-local.yml
@@ -29,4 +29,8 @@ jobs:
   - script: |
       cd test
       PATH=$HOME/.local/bin:$PATH python3 nni_test/nnitest/run_tests.py --config config/integration_tests.yml --ts local
-    displayName: 'Integration tests'
+    displayName: 'Integration test'
+  - script: |
+      cd test
+      source scripts/model_compression.sh
+    displayName: 'Model compression test'
