--- a/test/config/metrics_test/config_dict_metrics.yml
+++ b/test/config/metrics_test/config_dict_metrics.yml
@@ -10,7 +10,7 @@ tuner:
 
 trial:
   codeDir: .
-  command: python trial.py
+  command: python3 trial.py --dict_metrics
   gpuNum: 0
 
 useAnnotation: false
