--- a/test/config/training_service.yml
+++ b/test/config/training_service.yml
@@ -4,6 +4,10 @@ all:
 kubeflow:
   maxExecDuration: 15m
   nniManagerIp:
+  # use a small trial number to make IT faster
+  maxTrialNum: 2
+  trialConcurrency: 2
+
   kubeflowConfig:
     operator: tf-operator
     apiVersion: v1alpha2
@@ -27,6 +31,9 @@ kubeflow:
 frameworkcontroller:
   maxExecDuration: 15m
   nniManagerIp:
+  # use a small trial number to make IT faster
+  maxTrialNum: 2
+  trialConcurrency: 2
   frameworkcontrollerConfig:
     serviceAccountName: frameworkbarrier
     storage: azureStorage
