--- a/test/config/integration_tests.yml
+++ b/test/config/integration_tests.yml
@@ -47,7 +47,7 @@ testCases:
 - name: mnist-annotation
   configFile: test/config/examples/mnist-annotation.yml
 
-- name: cifar10_pytorch
+- name: cifar10-pytorch
   configFile: test/config/examples/cifar10-pytorch.yml
   config:
     # this example downloads large pretrained model weights
@@ -66,7 +66,7 @@ testCases:
 #########################################################################
 # nni features test
 #########################################################################
-- name: metrics_float
+- name: metrics-float
   configFile: test/config/metrics_test/config.yml
   config:
     maxTrialNum: 1
@@ -77,7 +77,7 @@ testCases:
       expected_result_file: expected_metrics.json
 
 # to be enabled
-#- name: metrics_dict
+#- name: metrics-dict
 #  configFile: test/config/metrics_test/config_dict_metrics.yml
 #  config:
 #    maxTrialNum: 1
