--- a/src/nni_manager/package.json
+++ b/src/nni_manager/package.json
@@ -65,7 +65,8 @@
     "node.extend": "^1.1.7",
     "hoek": "^4.2.1",
     "js-yaml": "^3.13.1",
-    "npm": "^6.13.4"
+    "npm": "^6.13.4",
+    "acorn": ">=7.1.1"
   },
   "engines": {
     "node": ">=10.0.0"
