--- a/test/pipelines/pipelines-it-remote-windows.yml
+++ b/test/pipelines/pipelines-it-remote-windows.yml
@@ -44,7 +44,7 @@ jobs:
       cd test
       python nni_test/nnitest/generate_ts_config.py --ts remote --remote_user $(docker_user) --remote_host $(remote_host) --remote_port $(Get-Content port) --remote_pwd $(docker_pwd) --nni_manager_ip $(nni_manager_ip)
       Get-Content config/training_service.yml
-      python nni_test/nnitest/run_tests.py --config config/integration_tests.yml --ts remote --exclude cifar10,smac,bohb,nnicli
+      python nni_test/nnitest/run_tests.py --config config/integration_tests.yml --ts remote --exclude cifar10
     displayName: 'integration test'
   - task: SSH@0
     inputs:
