--- a/examples/trials/mnist-pbt-tuner-pytorch/config.yml
+++ b/examples/trials/mnist-pbt-tuner-pytorch/config.yml
@@ -1,15 +1,17 @@
 authorName: default
 experimentName: example_mnist_pbt_tuner_pytorch
-trialConcurrency: 1
-maxExecDuration: 1h
-maxTrialNum: 10
+trialConcurrency: 3
+maxExecDuration: 2h
+maxTrialNum: 100
 #choice: local, remote, pai
 trainingServicePlatform: local
 searchSpacePath: search_space.json
 #choice: true, false
 useAnnotation: false
 tuner:
-  builtinTunerName: PBTTuner
+  codeDir: ~/nni/src/sdk/pynni/nni/pbt_tuner
+  classFileName: pbt_tuner.py
+  className: PBTTuner
   classArgs:
     #choice: maximize, minimize
     optimize_mode: maximize
