--- a/test/config/assessors/medianstop.yml
+++ b/test/config/assessors/medianstop.yml
@@ -1,9 +1,9 @@
 authorName: nni
 experimentName: default_test
 maxExecDuration: 5m
-maxTrialNum: 4
-trialConcurrency: 4
-searchSpacePath: search_space.json
+maxTrialNum: 8
+trialConcurrency: 8
+searchSpacePath: ../naive_trial/search_space.json
 
 tuner:
   builtinTunerName: TPE
@@ -16,7 +16,7 @@ assessor:
     optimize_mode: maximize
 
 trial:
-  codeDir: ./
+  codeDir: ../naive_trial
   command: python3 trial.py
   gpuNum: 0
 
