--- a/test/config/pr_tests.yml
+++ b/test/config/pr_tests.yml
@@ -67,9 +67,15 @@ testCases:
 #########################################################################
 - name: assessor-curvefitting
   configFile: test/config/assessors/curvefitting.yml
+  config:
+    maxTrialNum: 2
+    trialConcurrency: 2
 
 - name: assessor-medianstop
   configFile: test/config/assessors/medianstop.yml
+  config:
+    maxTrialNum: 2
+    trialConcurrency: 2
 
 #########################################################################
 # nni tuners test
