--- a/test/config/pr_tests.yml
+++ b/test/config/pr_tests.yml
@@ -16,6 +16,7 @@ testCases:
   launchCommand: python3 nni_test/nnitest/naive_test.py --config $configFile
   experimentStatusCheck: False
   stopCommand:
+  platform: linux darwin
 
 #########################################################################
 # nni features test
