--- a/examples/model_compress/configs/pruner/vgg16_pruner.yaml
+++ b/examples/model_compress/configs/pruner/vgg16_pruner.yaml
@@ -5,8 +5,9 @@ model_name: vgg16
 config_list: [{
     'sparsity': 0.5,
     'op_types': ['default'],
-    'op_names': ['feature.0', 'feature.3', 'feature.7', 'feature.10', 'feature.14', 'feature.17', 'feature.24', 'feature.27', 'feature.30', 'feature.34', 'feature.37']
+    'op_names': ['feature.0', 'feature.3', 'feature.7', 'feature.10', 'feature.14', 'feature.17', 'feature.24', 'feature.27', 'feature.30', 'feature.34', 'feature.37'],
+    'prune_frequency': 10,
+    'prune_filters_each_step': 50
 }]
 
-pretrain: ./experiments/vgg16_pretrain_cifar10.pth
 
