--- a/test/config/examples/mnist-pytorch.yml
+++ b/test/config/examples/mnist-pytorch.yml
@@ -1,7 +1,7 @@
 authorName: nni
 experimentName: default_test
 maxExecDuration: 15m
-maxTrialNum: 4
+maxTrialNum: 2
 trialConcurrency: 2
 searchSpacePath: ./mnist_pytorch_search_space.json
 
@@ -13,7 +13,7 @@ assessor:
     optimize_mode: maximize
 trial:
   codeDir: ../../../examples/trials/mnist-pytorch
-  command: python3 mnist.py  --epochs 1
+  command: python3 mnist.py  --epochs 1 --batch_num 10
   gpuNum: 0
 
 useAnnotation: false
